--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.2",
+    "babel-jest": "^27.2.4",
+    "jest": "^27.2.4",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
